# Protein-Synthesis-Comparisons

./: .gitignore  CMakeLists.txt  LICENSE  README.md  changelog.md  makefile  results.md  results.txt
lib/: CMakeLists.txt
lib/src/: synthesis.cc  synthesis.h
src/: protein_synthesis.cc  protein_synthesis.py
src/comparison/: makefile  protein_synthesis.cc  protein_synthesis.py  protein_synthesis_multithread.cc
src/python/: protein_synthesis.py  synthesis.py
